--- a/src/main/resources/templates/all.html
+++ b/src/main/resources/templates/all.html
@@ -16,15 +16,31 @@
         </tr>
     </thead>
     <tbody>
-        <tr th:each="simple: ${simpleText}">
-            <td th:text="${simple.ID}">ID</td>
-            <td th:text="${simple.text}">Text</td>
-        </tr>
+        <th:block th:each="simple: ${simpleText}">
+            <tr>
+                <td th:text="${simple.ID}">ID</td>
+                <td th:text="${simple.text}">Text</td>
+                <td><button th:onclick="'showI(' + ${simple.ID} + ')'">Update</button></td>
+                <td th:id="${simple.ID}" style="display: none">
+                    <form action="#" th:object="${simpleTextUpdate}" method="post" style="display: block ruby;">
+                        <input type="text" th:field="*{text}">
+                        <input type="number" th:value="*{text}" style="display: none;">
+                        <button type="submit">Submit</button>
+                    </form>
+                </td>
+            </tr>
+        </th:block>
     </tbody>
 
 </table>
 <p><a href="/add">Add next data</a></p>
 
+<script>
+    function showI(id)
+    {
+       document.getElementById(id).style.display = 'table-cell';
+    }
+</script>
 
 </body>
 </html>
