Show dialog box for update (without update functionality)

--- a/src/main/resources/templates/allObjects.html
+++ b/src/main/resources/templates/allObjects.html
@@ -5,6 +5,7 @@
     <title>All objects</title>
     <link rel="stylesheet" href="css/table.css">
     <link rel="stylesheet" href="css/flex.css">
+    <link rel="stylesheet" href="css/overlay.css">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <script src="all.js"></script>
@@ -26,8 +27,13 @@
 
         <div>
             Text:<input id="text" type="text" name="text">
-            <button type="button" class="btn btn-primary" onclick="add()">Add new</button>
+            <button onclick="add()">Add new</button>
         </div>
+    <div class="overlay">
+        <div class="modal">
+
+        </div>
+    </div>
 </div>
 
 </body>
