--- a/src/main/resources/static/css/flex.css
+++ b/src/main/resources/static/css/flex.css
@@ -5,3 +5,9 @@
 .flex-container > * {
     margin: 20px;
 }
+
+@media screen and (max-width: 600px) {
+  .flex-container {
+      display: block;
+  }
+}
